--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
  /* Global Styles */
  body {
-    background-color: #f0f0f0;
+    background-color: #f0c9c9;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -9,9 +9,10 @@
 /* Navbar */
 .heading {
     background-color: #7e7772; /* Semantic UI orange */
-    color: #fff;
+    color: #4a6daf;
     padding: 1rem;
     text-align: center;
+    border-radius: 20px;
 }
 
 .heading .item {
